--- a/community/css/mystyle_.css
+++ b/community/css/mystyle_.css
@@ -1,4 +1,4 @@
-.node {
+/*.node {
   stroke-width: 1.5px;
 }
 
@@ -9,4 +9,30 @@
 .link {
   stroke: #999;
   stroke-opacity: .6;
+}*/
+
+.link {
+	stroke: #c1c1c1;
+	stroke-width: 2px; 
+	pointer-events: all;
+}
+
+.node circle {
+ pointer-events: all;
+ stroke: #777;
+ stroke-width: 2px;
+}
+  
+  
+div.tooltip {
+    position: absolute;
+    background-color: white;
+    max-width; 200px;
+    height: auto;
+    padding: 1px;
+    border-style: solid;
+    border-radius: 4px;
+    border-width: 1px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, .5);
+    pointer-events: none;
 }
